--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>HTML: Text emphasis</title>
+        <title>CSC106 TJP</title>
     </head>
     <body>
 
-    <h1>All about Spencer!</h1>
+    <h1>Welcome to Spencer's Programming Portfolio!</h1>
+        
+        
 
     </body>
 </html>
