--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>CSC106 TJP</title>
     </head>
     <body>
-
+<img src="csc106_banner.jpeg">
     <h1>Welcome to Spencer's Programming Portfolio!</h1>
         
         
