--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>Welcome to Spencer's Programming Portfolio!</h1>
         <table>
             <tr><td><img src="home.png"></td><td><img src="javascripts.png"></td><td><img src="apps.png"></td><td><img src="about.png"></td></tr>
-        
+        <p>test text </p>
         
 
     </body>
