--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         
         <img src="csc106_banner.jpg">
         <h1>Welcome to Spencer's Programming Portfolio!</h1>
-        <table>
+        <table class=center>
             <tr><td><img src="home.png"></td><td><img src="javascripts.png"></td><td><img src="apps.png"></td><td><img src="about.png"></td></tr>
         
 		<p>test text </p>
