--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 	    <table class=center>
             <tr><td><img src="home.png"></td><td><img src="javascripts.png"></td><td><img src="apps.png"></td><td><img src="about.png"></td></tr>
 	    </table>
+	    
+	    <p> test test </p>
         
 
     </body>
