--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>CSC106 TJP</title>
-    </head>
+    <style>
+	    img {
+		    display: block;
+		    margin-left: auto;
+		    margin-right: auto;
+		    width: 50%;
+	    }
+	</head>
     <body>
-	    <img src="csc106_banner.jpg">
+	    <img src="csc106_banner.jpg" alt="CSC 106 Banner" class="center">
 	    <table class=center>
             <tr><td><img src="home.png"></td><td><img src="javascripts.png"></td><td><img src="apps.png"></td><td><img src="about.png"></td></tr>
 	    </table>
