--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>CSC106 TJP</title>
-    <style>
-	    img {
-		    display: block;
-		    margin-left: auto;
-		    margin-right: auto;
-		    width: 50%;
-	    }
+	    <style>
+		    img {
+			    margin-left:auto;
+			    margin-right:auto;
+			    width:100%;
+	    </style>
 	</head>
     <body>
 	    <img src="csc106_banner.jpg" alt="CSC 106 Banner" class="center">
