--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 			    margin-right:auto;
 			    width:75%;
 		    }
+		    table {
+			    margin-left:auto;
+			    margin-right:auto;
+			    width:100%;
+		    }
 	    </style>
 	</head>
     <body>
