--- a/index.html
+++ b/index.html
@@ -4,16 +4,12 @@
         <meta charset="utf-8">
         <title>CSC106 TJP</title>
 	    <style>
-		    img {
-			    margin-left:auto;
-			    margin-right:auto;
-			    width:75%;
-		    }
-		    table {
-			    margin-left:auto;
-			    margin-right:auto;
-			    width:100%;
-		    }
+		    .center {
+ 			 display: block;
+			 margin-left: auto;
+  			 margin-right: auto;
+  			 width: 50%;
+			}
 	    </style>
 	</head>
     <body>
