--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   			 margin-right: auto;
   			 width: 50%;
 			}
+		    img {
+			    margin-left:auto;
+			    margin-right:auto;
+			    width:50%;
+		    }
 	    </style>
 	</head>
     <body>
