--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
             <tr><td><img src="home.png"></td><td><img src="javascripts.png"></td><td><img src="apps.png"></td><td><img src="about.png"></td></tr>
 	    </table>
 	    
-	    <h1>Welcome to Spencer's Programming Portfolio!</h1>
+	    <h1>Welcome to Spencer's About Page!</h1>
         
 
     </body>
