--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>CSC106 TJP</title>
+        <title>CSC106 Hoyt</title>
 	</head>
     <body>
 	    <img src="csc106_banner.jpg" alt="CSC 106 Banner" class="center">
@@ -10,7 +10,17 @@
             <tr><td><img src="home.png"></td><td><img src="javascripts.png"></td><td><img src="apps.png"></td><td><img src="about.png"></td></tr>
 	    </table>
 	    
-	    <h1>Welcome to Spencer's About Page!</h1>
+	    <h1>About Spencer</h1>
+		
+		<p><strong>Welcome!</strong> My name is Spencer Hoyt and currently I am a freshman at URI majoring in Computer Science and hopefully minoring in Cybersecurity. <br>
+		I am unfortunetly not on campus this year, however I am commuting so I will at least be on campus a little bit. I have not had much coding experience, and this is my <br>
+		first time actaully coding stuff that is going on to a live website, which is pretty exciting for me, despite it not being a very hard thing to do. Anyway, I am <br> 
+		18 years old and have had a number of odd jobs here and there, including working at a Chick-fil-A restaurant, which was an extremely fun and rewarding job, <br>
+		especially for the food! Right now I am a lifeguard working for a private pool club, as well as a sales representative at my local Home Depot. I have been <br>
+		swimming (as a sport) my entire life, with a little bit of cross country/track here and there. I absolutely love meeting new people, so if you want my phone <br>
+		number is 860-338-6358. My snapchat is @hoytspencer and my instagram is @spencerhoyt. Feel free to add me and get in touch however you want! I look forward to <br>
+		meeting you! 
+		</p>
         
 
     </body>
