--- a/javascripts.html
+++ b/javascripts.html
@@ -8,7 +8,7 @@
     <body>
 	    <img src="csc106_banner.jpg" alt="CSC 106 Banner" class="center">
 	    <table class=center>
-            <tr><td><a href="spencerhoyt.github.io/index.html" <img src="home.png"></td><td><img src="javascripts.png"></td><td><img src="apps.png"></td><td><img src="about.png"></td></tr>
+            <tr><td><img src="home.png"></td><td><img src="javascripts.png"></td><td><img src="apps.png"></td><td><img src="about.png"></td></tr>
 	    </table>
 	    
 	    <h1>Welcome to Spencer's Javascript Page!</h1>
