--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <body>
 	    <img src="csc106_banner.jpg" alt="CSC 106 Banner" class="center">
 	    <table class=center>
-            <tr><td><a href="spencerhoyt.github.io" <img src="home.png" alt="Home Page"></a></td><td><img src="javascripts.png"></td><td><img src="apps.png"></td><td><img src="about.png"></td></tr>
+            <tr><td><a href="https://spencerhoyt.github.io/index.html"><img src="home.png" alt="Home Page"></a></td><td><a href="https://spencerhoyt.github.io/javascripts.html"><img src="javascripts.png" alt="Javasceripts Page"></td><td><a href+"https://spencerhoyt.github.io/apps.html"><img src="apps.png" alt="Apps Page"></a></td><td><a href="https://spencerhoyt.github.io/about.html"><img src="about.png" alt="About Page"></a"</td></tr>
 	    </table>
 	    
 	    <h1>Welcome to Spencer's Programming Portfolio!</h1>
