--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	    <table>
             <tr>
 		<td><a href="https://spencerhoyt.github.io/index.html"><img src="home.png" alt="Home Page"></a></td>
-		<td><a href="https://spencerhoyt.github.io/javascripts.html"><img src="javascripts.png" alt="Javasceripts Page"></td>
-		<td><a href+"https://spencerhoyt.github.io/apps.html"><img src="apps.png" alt="Apps Page"></a></td>
-		<td><a href="https://spencerhoyt.github.io/about.html"><img src="about.png" alt="About Page"></a"</td></tr>
+		<td><a href="https://spencerhoyt.github.io/javascripts.html"><img src="javascripts.png" alt="Javasceripts Page"></a></td>
+		<td><a href="https://spencerhoyt.github.io/apps.html"><img src="apps.png" alt="Apps Page"></a></td>
+		<td><a href="https://spencerhoyt.github.io/about.html"><img src="about.png" alt="About Page"></a></td></tr>
 	    </table>
 	    
 	   
