--- a/about.html
+++ b/about.html
@@ -7,11 +7,11 @@
     <body>
 	    <img src="csc106_banner.jpg" alt="CSC 106 Banner">
 	    <table>
-            <tr>
+                        <tr>
 		<td><a href="https://spencerhoyt.github.io/index.html"><img src="home.png" alt="Home Page"></a></td>
-		<td><a href="https://spencerhoyt.github.io/javascripts.html"><img src="javascripts.png" alt="Javasceripts Page"></td>
-		<td><a href+"https://spencerhoyt.github.io/apps.html"><img src="apps.png" alt="Apps Page"></a></td>
-		<td><a href="https://spencerhoyt.github.io/about.html"><img src="about.png" alt="About Page"></a"</td></tr>
+		<td><a href="https://spencerhoyt.github.io/javascripts.html"><img src="javascripts.png" alt="Javasceripts Page"></a></td>
+		<td><a href="https://spencerhoyt.github.io/apps.html"><img src="apps.png" alt="Apps Page"></a></td>
+		<td><a href="https://spencerhoyt.github.io/about.html"><img src="about.png" alt="About Page"></a></td></tr>
 	    </table>
 	    
 	   
