Adding CSS Margins for Buttons

--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>CSC106 TJP</title>
+	    <style>
+		    #buttons {
+			    margin:auto;
+		    }
+	    </style>
 	</head>
     <body>
 	    <img src="csc106_banner.jpg" alt="CSC 106 Banner">
 	    <table>
-            <tr>
+            <tr id="buttons">
 		<td><a href="https://spencerhoyt.github.io/index.html"><img src="home.png" alt="Home Page"></a></td>
 		<td><a href="https://spencerhoyt.github.io/javascripts.html"><img src="javascripts.png" alt="Javasceripts Page"></a></td>
 		<td><a href="https://spencerhoyt.github.io/apps.html"><img src="apps.png" alt="Apps Page"></a></td>
