--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>CSC106 TJP</title>
 	    <style>
 		    #buttons {
-			    margin:auto;
+			    width:75%;
 		    }
 	    </style>
 	</head>
