--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
         <meta charset="utf-8">
         <title>CSC106 TJP</title>
 	    <style>
-		   
+		div {
+ 			 background-image: url('myBackground.jpg');
+			}
 	    </style>
 	</head>
     <body>
